src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 10rem !important; /* Pushes content down from Nav */
    text-align: center;
    background: black;
}

h1 {
    font-size: clamp(2.5rem, 10vw, 5rem) !important;
    margin-bottom: 5rem !important; /* Forces the gap so words don't overlap */
    line-height: 1.2;
}

p {
    line-height: 2 !important; 
    max-width: 850px;
    font-size: 1.25rem;
    margin-top: 2rem;
}

